--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+logging.pattern.dateformat=HH:mm:ss
+server.port=${PORT:8084}
+spring.datasource.url=${BBDD_URI}
+spring.datasource.username=${BBDD_USERNAME}
+spring.datasource.password=${BBDD_PASSWORD}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC-3
